<resources>
    <string name="app_name">Learn Github</string>
    <string name="title_section1">Basics</string>
    <string name="title_section2">Intermediate</string>
    <string name="title_section3">Advance</string>
    <string name="title_section4">Judge your learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="email">vivek2neel@gmail.com</string>
    <string name="subject">Type your queries/suggestions</string>
    <string name="share">https://play.google.com/store/apps/details?id=com.vivek.github</string>
    <string name="concept">Important key words in Git learning</string>
       <string name="github">To understand GitHub, you must first have an understanding of Git. Git is an open-source version control system that was started by Linus Trovalds. Git is a command-line tool, but the center around which all things involving Git revolve – effectively, the Hub, is GitHub.com, where developers can store their projects and network with likeminded people.</string>
<string name="button1">Repoistory</string>
<string name="button2">Commit</string>
<string name="button3">Branch</string>
<string name="linux">If you want to install Git on Linux via a binary installer, you can generally do so through the basic package-management tool that comes with your distribution. If you’re on Fedora for example, you can run the below command in terminal</string>
<string name="debian">If you’re on a Debian-based distribution like Ubuntu, then you can run the below command in terminal</string>
<string name="window">An easy way to get Git installed is by installing GitHub for Windows. The installer includes a command line version of Git as well as the GUI.</string>
<string name="mac"> you can install it via a binary installer. An OSX Git installer is maintained and available for download at the Git website. Click the below button to download</string>
<string name="set1">Git comes with a tool called git config that lets you get and set configuration variables that control all aspects of how Git looks and operates. These variables can be stored in three different places:</string>
<string name="set2">The first thing you should do when you install Git is to set your user name and e-mail address. This is important because every Git commit uses this information, and it’s immutably baked into the commits you start creating:</string>
<string name="set3">Now that your identity is set up, you can configure the default text editor that will be used when Git needs you to type in a message. If not configured, Git uses your system’s default editor, which is generally Vim. If you want to use a different text editor, such as Emacs, you can do the following:</string>
<string name="set4">If you want to check your settings , then you can run the below command</string>
<string name="set5">You can also check what Git thinks a specific key’s value is by typing git config key . such as</string>
<string name="set6">Just type the below command in terminal .it basically creates a new ssh key for the given email id</string>
<string name="set7">And check finally whether everything works by typing</string>
<string name="repo">A repository is a location where all the files for a particular project are stored, usually abbreviated to “repo.” Each project will have its own repo, and can be accessed by a unique URL.</string>
<string name="repo1">Go to github.com and login into your account.Click Repositories tab and select new in the upper right corner.see the below image for reference</string>
<string name="repo2">Type a name for your repository and an optional description.You can choose to to make the repository either public or private. Public repositories are visible to the public, while private repositories are only accessible to you, and people you share them with.After u finish everything select create repository</string>
<string name="repo3">So we just made a space for your project to live online, but that’s not where you’ll be working on it. The bulk of your work is going to be done on your computer. So we need to actually mirror that repository we just made as a local directory.So type the below commands one by one</string>
<string name="commit">This is the command that gives Git its power. When you commit, you are taking a “snapshot” of your repository at that point in time, giving you a checkpoint to which you can reevaluate or restore your project to any previous state.</string>
<string name="commit2">After you make any sort of change, you use git commit in order to take a “snapshot” of the repository</string>
<string name="branch">How do multiple people work on a project at the same time without Git getting them confused? Usually, they “branch off” of the main project with their own versions full of changes they themselves have made. After they’re done, it’s time to “merge” that branch back with the “master,” the main directory of the project.</string>
<string name="branch2">Working with multiple collaborators and want to make changes on your own? This command will let you build a new branch, or timeline of commits, of changes and file additions that are completely your own. Your title goes after the command. If you wanted a new branch called “neel,” you should type </string>
<string name="remote">Manage the set of repositories ("remotes") whose branches you track. </string>
<string name="move">See the below command ,In the first form, it renames "source", which must exist and be either a file, symlink or directory, to "destination". In the second form, the last argument has to be an existing directory; the given sources will be moved into this directory.
The index is updated after successful completion, but the change must still be committed.</string>
<string name="remove">Remove files from the index, or from the working tree and the index. git rm will not remove a file from just your working directory. (There is no option to remove a file only from the working tree and yet keep it in the index; use /bin/rm if you want to do that.) The files being removed have to be identical to the tip of the branch, and no updates to their contents can be staged in the index, though that default behavior can be overridden with the -f option. When --cached is given, the staged content has to match either the tip of the branch or the file on disk, allowing the file to be removed from just the index.</string>
<string name="add">In Git, you have to add file contents to your staging area before you can commit them. If the file is new, you can run git add to initially add the file to your staging area, but even if the file is already "tracked" - ie, it was in your last commit - you still need to call git add to add new modifications to your staging area. Lets see a few examples of this. </string>
<string name="add2">It is also common to recursively add all files in a new project by specifying the current working directory like this:</string>
<string name="status">As you saw in the git add section, in order to see what the status of your staging area is compared to the code in your working directory, you can run the git status command. Using the -s option will give you short output. Without that flag, the git status command will give you more context and hints. Here is the same status output with and without the -s. The short output looks like this: </string>
<string name="diff">Diff use is to describe the changes that are staged or modified on disk but unstaged.</string>
<string name="conflicts">So, Git merges are magical, we never ever have to deal with merge conflicts again, right? Not quite. In situations where the same block of code is edited in different branches there is no way for a computer to figure it out, so its up to us. Lets see another example of changing the same line in two branches.lets see an example</string>
<string name="conflicts2">Now we have committed a change to one line in our README file in a branch. Now lets change the same line in a different way back on our master branch.</string>
<string name="conflicts3">Now is the fun part - we will merge the first branch into our master branch, causing a merge conflict.</string>
<string name="conflicts4">You can see that Git inserts standard merge conflict markers, much like Subversion, into files when it gets a merge conflict. Now its up to us to resolve them. We will do it manually here, but check out git mergetool if you want Git to fire up a graphical mergetool (like kdiff3, emerge, p4merge, etc) instead. </string>
<string name="conflicts5">A cool tip in doing merge conflict resolution in Git is that if you run git diff, it will show you both sides of the conflict and how you have resolved it as shown here. Now its time to mark the file as resolved. In Git we do that with git add - to tell Git the file has been resolved you have to stage it.</string>
<string name="conflicts6">And now we have successfully resolved our merge conflict and committed the result.</string>
<string name="fetch1">git fetch will synchronize you with another repo, pulling down any data that you do not have locally and giving you bookmarks to where each branch on that remote was when you synchronized. These are called "remote branches" and are identical to local branches except that Git will not allow you to check them out - however, you can merge from them, diff them to other branches, run history logs on them, etc. You do all of that stuff locally after you synchronize. </string>
<string name="fetch2">Assuming you have a remote all set up and you want to pull in updates, you would first run git fetch [alias] to tell Git to fetch down all the data it has that you do not, then you would run git merge [alias]/[branch] to merge into your current branch anything new you see on the server (like if someone else has pushed in the meantime). So, if you were working on a Hello World project with several other people and wanted to bring in any changes that had been pushed since we last connected, we would do something like this:</string>
<string name="fetch0">download new branches and data from a remote repository</string>
<string name="pull0">fetch from a remote repo and try to merge into the current branch</string>
<string name="pull1">To share the cool commits you have done with others, you need to push your changes to the remote repository. To do this, you run git push [alias] [branch] which will attempt to make your [branch] the new [branch] on the [alias] remote. Lets try it by initially pushing our master branch to the new github remote we created earlier.</string>
<string name="pull2">Pretty easy. Now if someone clones that repository they will get exactly what we have committed and all of its history.
What if you have a topic branch like the neel branch created earlier and want to share just that? You can just push that branch instead.</string>
<string name="pull"> This command will basically run a git fetch immediately followed by a git merge of the branch on that remote that is tracked by whatever branch you are currently in. Running the fetch and merge commands separately involves less magic and less problems</string>
<string name="stage">Before we start knowing about git add we must know what staging means in github</string>
<string name="stage2">To stage a file is simply to prepare it finely for a commit. Git, with its index allows you to commit only certain parts of the changes you have done since the last commit.</string>
</resources>