<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#272d33"
    android:gravity="top" >
    
  

 <ScrollView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:clipToPadding="false" 
      >

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         android:orientation="vertical" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="What is github?"
             android:textColor="#d65431"
             android:textSize="20sp" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/github"
             android:textColor="#25a26e"
             android:textSize="20sp" />

         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
             android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="@string/concept"
             android:textColor="#d65431"
             android:textSize="20sp" />

         <Button
             android:id="@+id/button1"
             android:layout_width="350sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/button1"
              android:textColor="#25a26e"
              android:background="#00000000" />
         
          <Button
             android:id="@+id/button2"
             android:layout_width="350sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/button2"
              android:textColor="#25a26e"
              
              android:background="#00000000" />
          
          <Button
             android:id="@+id/button3"
             android:layout_width="350sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/button3"
              android:textColor="#25a26e"
              
              android:background="#00000000" />

     </LinearLayout>
 </ScrollView>

</RelativeLayout>
