<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff272d33"
    android:gravity="top" >
    
  

 <ScrollView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:clipToPadding="false" 
      >

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         android:orientation="vertical" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="About Merge conflicts"
             android:textColor="#d65431"
             android:textSize="20sp" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/conflicts"
             android:textColor="#25a26e"
             android:textSize="20sp" />
         
           <WebView
        android:id="@+id/conflicts1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp" />
           
           
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/conflicts2"
             android:textColor="#25a26e"
             android:textSize="20sp" />
         
          <WebView
        android:id="@+id/conflicts2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp" />
          
          <TextView
             android:id="@+id/textVie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/conflicts3"
             android:textColor="#25a26e"
             android:textSize="20sp" />
          
           <WebView
        android:id="@+id/conflicts3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp" />
           
            <TextView
             android:id="@+id/textVi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/conflicts4"
             android:textColor="#25a26e"
             android:textSize="20sp" />
            
              <WebView
        android:id="@+id/conflicts4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp" />
              
               <TextView
             android:id="@+id/extVi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/conflicts5"
             android:textColor="#25a26e"
             android:textSize="20sp" />
               
                <WebView
        android:id="@+id/conflicts5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp" />
                
                  <TextView
             android:id="@+id/texti"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="@string/conflicts6"
             android:textColor="#25a26e"
             android:textSize="20sp" />
            

        
           
            
           
           

        
     </LinearLayout>
 </ScrollView>

</RelativeLayout>
